# ATracker

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  GenerateArgparser.sh  args.ggo  main.cpp
src/autogen/: cmdline.c  cmdline.h
src/lib/: CMakeLists.txt  trackM_2-1.cpp  trackM_2-2.cpp  trackM_2-3.cpp  tracker.cpp  tracker.h  tracker.hpp  utils.cpp  utils.h
src/trophallaxis/: CMakeLists.txt  antdetect.cpp  antdetect.hpp
